# kaiju

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/kaiju-analysis/: Cargo.toml
crates/kaiju-analysis/src/: lib.rs
crates/kaiju-arch/: Cargo.toml
crates/kaiju-arch/src/: lib.rs
crates/kaiju-cli/: Cargo.toml
crates/kaiju-cli/src/: main.rs
crates/kaiju-cli/tests/: cli.rs
crates/kaiju-core/: Cargo.toml
crates/kaiju-core/src/: lib.rs
crates/kaiju-disasm/: Cargo.toml
crates/kaiju-disasm/src/: lib.rs
crates/kaiju-ir/: Cargo.toml
crates/kaiju-ir/src/: lib.rs
crates/kaiju-loader/: Cargo.toml
crates/kaiju-loader/src/: lib.rs
crates/kaiju-loader/tests/: hardening.rs
crates/kaiju-network/: Cargo.toml
crates/kaiju-network/src/: lib.rs
crates/kaiju-plugin-api/: Cargo.toml
crates/kaiju-plugin-api/src/: lib.rs
crates/kaiju-project/: Cargo.toml
crates/kaiju-project/src/: lib.rs
crates/kaiju-workbench/: Cargo.toml
crates/kaiju-workbench/src/: lib.rs  main.rs
docs/: architecture.md  ir.md  loader-model.md  network-model.md  phase-14-45.md  plugin-model.md  project-format.md  release-checklist.md  roadmap.md  scripting.md  snapshot-testing.md  threat-model.md
examples/basic-disasm/: Cargo.toml
examples/basic-disasm/src/: main.rs
examples/basic-load/: Cargo.toml
examples/basic-load/src/: main.rs
fuzz/: README.md
packaging/linux/: kaiju-workbench.desktop
scripts/: package-kaiju-workbench-linux.sh
tests/fixtures/: README.md  network-evidence.txt
tests/snapshots/: arch.txt  raw-analyze.txt  raw-diagnostics.txt  raw-export.json  raw-exports.txt  raw-imports.txt  raw-info.txt  raw-ir.txt  raw-map.txt  raw-relocations.txt  raw-strings.txt
