[package]
name = "kaiju-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kaiju-core = { path = "../kaiju-core" }
kaiju-disasm = { path = "../kaiju-disasm" }
kaiju-ir = { path = "../kaiju-ir" }
kaiju-loader = { path = "../kaiju-loader" }
kaiju-project = { path = "../kaiju-project" }

[lib]
path = "src/lib.rs"
