[package]
name = "kaiju-workbench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["svg"] }
kaiju-analysis = { path = "../kaiju-analysis" }
kaiju-core = { path = "../kaiju-core" }
kaiju-disasm = { path = "../kaiju-disasm" }
kaiju-ir = { path = "../kaiju-ir" }
kaiju-loader = { path = "../kaiju-loader" }
kaiju-project = { path = "../kaiju-project" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "kaiju-workbench"
path = "src/main.rs"
